# roomkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  context7.json  llms-full.txt  llms.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: README.md  framework-gaps-screen-agent.md  rtp-backend.md  sherpa-onnx-vad.md  sherpa-onnx.md  video-plan-support.md  wav-file-recorder.md
docs/c7/: ai-channels.md  api-reference.md  architecture.md  hooks.md  identity-and-realtime.md  installation.md  ollama-provider.md  orchestration.md  overview.md  quickstart.md  realtime-voice.md  resilience.md  rooms-and-channels.md  storage.md  testing.md  transport-providers.md  voice-channels.md  voice-pipeline.md
examples/: README.md  acp_claude_code.py  agent_skills.py  ai_activity_persistence.py  ai_agentic.py  ai_azure.py  ai_eviction.py  ai_human_input.py  ai_knowledge_scoring.py  ai_memory.py  ai_planning.py  ai_thinking.py  ai_tool_search.py  ai_tools_function_calling.py  aicoustics_denoiser.py  anthropic_ai.py  async_sms_notification.py  audio_level_vu_meter.py  avatar_call.py  azure_ai.py  background_agent_task.py  buzz_bot.py  buzz_voice_agent.py  channel_mute_unmute.py  circuit_breaker_retry.py  composite_messages.py  custom_identity_resolver.py  debug_elevenlabs_sdk.py  delivery_backend.py  delivery_redis.py  delivery_status_webhook.py  discord_bot.py  edit_delete_messages.py  elasticemail.py  external_tool_handler.py  face_touch_guard.py  facebook_messenger.py  fastrtc_client.html  gemini_vertex_ai.py  grok_tts.py  (+133 more)
examples/screen_assistant/: __init__.py  banner.py  handlers.py  observer.py  omniview.py  playwright.py  prompt.py  providers.py  screens.py  state.py  telemetry.py  tools.py  verify.py  vision.py
examples/shared/: __init__.py  audio.py  console.py  env.py  hooks.py  lifecycle.py  log.py  tools.py
examples/skills/code-review/: SKILL.md
examples/skills/test-writer/: SKILL.md
scripts/: build_llms_full.py  release.sh
src/roomkit/: __init__.py  _version.py  ai_docs.py
src/roomkit/channels/: __init__.py  _acp_client.py  _acp_events.py  _ai_context.py  _ai_events.py  _ai_generation.py  _ai_loop_rules.py  _ai_policy.py  _ai_resilience.py  _ai_steering.py  _ai_streaming.py  _ai_tools.py  _cli_markdown.py  _dangling_recovery.py  _realtime_audio.py  _realtime_context.py  _realtime_response.py  _realtime_skills.py  _realtime_speech.py  _realtime_tool_recovery.py  _realtime_tools.py  (+30 more)
tasks/: api-redesign.md  todo.md
tests/: conftest.py  test_aec_pipeline.py  test_ai_docs.py  test_ai_streaming_thinking.py  test_ai_streaming_tool_events.py  test_ai_streaming_tool_loop.py  test_aicoustics_denoiser.py  test_anam_realtime.py  test_audio_limits.py  test_audio_pipeline.py  test_auto_connect.py  test_av_channel.py  test_avatar.py  test_before_ai_generation.py  test_buzz_huddle_backend.py  test_channel_abc.py  test_circuit_breaker.py  test_cli_channel.py  test_commit_atomicity.py  test_compose_tool_handlers.py  test_configs.py  test_conformance_level0.py  test_console.py  test_dangling_recovery.py  test_delivery_strategies.py  test_describe_screen_tool.py  test_describe_webcam_tool.py  test_drain_barge_in.py  test_energy_vad.py  test_enums.py  test_event_ops.py  test_external_tool_handler.py  test_face_touch_filter.py  test_fastrtc_realtime_transport.py  test_framework.py  test_framework_events.py  test_framework_queries.py  test_framework_status_bus.py  test_gemini_realtime_failfast.py  test_hook_side_effects.py  (+145 more)
tests/delivery/: test_base.py  test_integration.py  test_memory.py  test_redis.py  test_serialization.py  test_worker.py
tests/orchestration/: test_framework_orchestration.py  test_handoff.py  test_loop_strategy.py  test_orchestration_base.py  test_pipeline.py  test_router.py  test_session_audit.py  test_state.py  test_status_bus.py  test_strategy_behavioral.py  test_strategy_loop.py  test_strategy_pipeline.py  test_strategy_supervisor.py  test_strategy_swarm.py  test_supervisor_inline.py  test_supervisor_strategy.py  test_tool_audit.py
tests/tasks/: test_cache.py  test_child_room_trace.py  test_delegate.py  test_delivery.py  test_integration.py  test_models.py  test_runner.py  test_structured_result.py
tests/test_channels/: test_acp.py  test_agent.py  test_ai.py  test_ai_empty_retry.py  test_ai_loop_rules.py  test_ai_retry.py  test_ai_skill_gating.py  test_ai_steering.py  test_ai_tool_loop.py  test_email.py  test_http.py  test_messenger.py  test_sms.py  test_telegram.py  test_tool_usage_memory.py  test_turn_config.py  test_websocket.py  test_whatsapp.py
tests/test_integration/: test_ai_assistant.py  test_ai_chain_depth.py  test_cross_channel.py  test_dynamic_channels.py  test_human_ai.py  test_identity_resolution.py  test_observer.py  test_regenerate.py  test_sin_scanning.py
tests/test_providers/: test_ai_models.py  test_anam_avatar.py  test_anam_realtime.py  test_anthropic.py  test_azure.py  test_buzz.py  test_discord.py  test_elasticemail.py  test_gemini.py  test_gemini_realtime.py  test_gemini_vertex.py  test_http.py  test_messenger.py  test_mistral.py  test_ollama.py  test_openai.py  test_openai_realtime.py  test_openrouter.py  test_personaplex_realtime.py  test_phone.py  test_polargrid.py  test_rcs.py  test_realtime_voices.py  test_sendgrid.py  test_sinch.py  test_sms_utils.py  test_teams.py  test_teams_webhook.py  test_telegram_bot.py  test_telegram_webhook.py  test_telnyx.py  test_telnyx_rcs.py  test_twilio.py  test_vllm.py  test_voicemeup.py  test_whatsapp_personal.py  test_xai_realtime.py
tests/video/: test_av_channel_fastrtc.py  test_fastrtc_video_backend.py  test_overlay_filter.py  test_overlay_image.py  test_overlay_rich.py  test_overlay_subtitle.py  test_overlay_text.py  test_screen_input.py  test_screen_input_tools.py  test_video_bridge.py  test_video_effects.py  test_watermark_filter.py  test_websocket_avatar.py  test_websocket_video_backend.py
tests/voice/: test_bridge.py  test_tts_filters.py  test_voice_close_providers.py  test_voice_tts_filter.py
(+533 files in other folders)
