[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roomkit"
dynamic = ["version"]
description = "Pure async Python library for multi-channel conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Sylvain Boily" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.9"]

[project.optional-dependencies]
httpx = ["httpx>=0.27"]
pydantic-ai = ["pydantic-ai>=0.1"]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.30"]
vllm = ["openai>=1.30"]
gemini = ["google-genai>=1.0.0"]
sherpa-onnx = ["sherpa-onnx>=1.10"]
qwen-tts = ["qwen-tts>=0.1"]
fastrtc = ["fastrtc", "numpy"]
webrtc-aec = ["aec-audio-processing>=0.1"]
local-audio = ["sounddevice", "numpy"]
rtp = ["aiortp>=0.1.0"]
sip = ["aiosipua[rtp]>=0.1.2"]
twilio = ["twilio>=9.0"]
phonenumbers = ["phonenumbers>=8.13"]
pynacl = ["pynacl>=1.5"]
realtime-openai = ["openai>=1.30", "websockets>=13.0"]
realtime-gemini = ["google-genai>=1.0.0"]
websocket = ["websockets>=13.0"]
sse = ["httpx>=0.27", "httpx-sse>=0.4"]
gradium = ["gradium>=0.5.7"]
smart-turn = ["numpy", "onnxruntime", "transformers"]
telegram = ["httpx>=0.27"]
teams = ["botbuilder-core>=4.14"]
whatsapp-personal = ["neonize>=0.3.14"]
postgres = ["asyncpg>=0.29"]
sources = [
    "roomkit[websocket]",
    "roomkit[sse]",
    "roomkit[whatsapp-personal]",
]
providers = [
    "roomkit[httpx]",
    "roomkit[anthropic]",
    "roomkit[openai]",
    "roomkit[vllm]",
    "roomkit[gemini]",
    "roomkit[twilio]",
    "roomkit[telegram]",
    "roomkit[teams]",
    "roomkit[gradium]",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "bandit>=1.7",
    "pre-commit>=3.8",
    "roomkit[providers]",
    "roomkit[phonenumbers]",
    "roomkit[pynacl]",
    "roomkit[sources]",
    "roomkit[docs]",
    "roomkit[postgres]",
]
all = [
    "roomkit[providers]",
    "roomkit[pydantic-ai]",
    "roomkit[whatsapp-personal]",
]

[project.urls]
Homepage = "https://roomkit.live"
Documentation = "https://www.roomkit.live/docs/"
Repository = "https://github.com/roomkit-live/roomkit"
Issues = "https://github.com/roomkit-live/roomkit/issues"

[tool.hatch.version]
path = "src/roomkit/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/AGENTS.md",
    "/llms.txt",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roomkit"]
artifacts = [
    "*.md",
    "*.txt",
]

[tool.hatch.build.targets.wheel.force-include]
"AGENTS.md" = "roomkit/AGENTS.md"
"llms.txt" = "roomkit/llms.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::ResourceWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["google", "google.genai", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sherpa_onnx", "sherpa_onnx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["qwen_tts", "qwen_tts.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiortp", "aiortp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiosipua", "aiosipua.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastrtc", "fastrtc.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aec_audio_processing", "aec_audio_processing.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sounddevice", "sounddevice.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["onnxruntime", "onnxruntime.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["transformers", "transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["botbuilder", "botbuilder.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gradium", "gradium.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["neonize", "neonize.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["roomkit.sources.neonize"]
disallow_untyped_decorators = false

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["roomkit"]

[tool.ruff.lint.per-file-ignores]
"src/roomkit/channels/__init__.py" = ["N802"]  # Factory functions use PascalCase by design
"src/roomkit/voice/backends/base.py" = ["B027"]  # Optional callback hooks with default no-ops
"src/roomkit/voice/realtime/provider.py" = ["B027"]  # Optional callback hooks with default no-ops
"src/roomkit/voice/realtime/transport.py" = ["B027"]  # Optional callback hooks with default no-ops
"examples/*.py" = ["E402"]  # Logging config before imports is intentional
"tests/*.py" = ["N817"]  # Allow short aliases in tests

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Allow assert in non-test code (used in type narrowing)

[tool.coverage.run]
source = ["roomkit"]
omit = [
    "src/roomkit/store/postgres.py",
    "src/roomkit/voice/realtime/fastrtc_transport.py",
    "src/roomkit/voice/realtime/local_transport.py",
    "src/roomkit/voice/realtime/ws_transport.py",
    "src/roomkit/voice/stt/deepgram.py",
    "src/roomkit/voice/stt/gradium.py",
    "src/roomkit/voice/tts/elevenlabs.py",
    "src/roomkit/voice/tts/gradium.py",
    "src/roomkit/voice/tts/qwen3.py",
    "src/roomkit/providers/openai/realtime.py",
    "src/roomkit/providers/gemini/realtime.py",
    "src/roomkit/providers/pydantic_ai/*.py",
    "src/roomkit/voice/backends/rtp.py",
    "src/roomkit/voice/backends/sip.py",
    "src/roomkit/voice/pipeline/aec/webrtc.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
