[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roomkit"
dynamic = ["version"]
description = "Pure async Python library for multi-channel conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Sylvain Boily", email = "sylvainboilydroid@gmail.com" }]
keywords = ["async", "multi-channel", "chat", "voice", "sms", "rcs", "whatsapp", "ai", "rooms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.9"]

[project.optional-dependencies]
httpx = ["httpx>=0.27"]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=2.28"]
azure = ["openai>=2.28"]
vllm = ["openai>=2.28"]
gemini = ["google-genai>=1.0.0"]
mistral = ["mistralai>=1.0"]
deepgram = ["deepgram-sdk>=6.0.0"]
sherpa-onnx = ["sherpa-onnx>=1.10"]
elevenlabs = ["elevenlabs>=1.0"]
qwen-tts = ["qwen-tts>=0.1"]
qwen-asr = ["qwen-asr>=0.0.4"]
neutts = ["neutts>=0.1"]
fastrtc = ["fastrtc>=0.0.18", "numpy>=1.26"]
aicoustics = ["aic-sdk>=2.1"]
webrtc-aec = ["aec-audio-processing>=0.1"]
local-audio = ["sounddevice>=0.4", "numpy>=1.26"]
local-video = ["opencv-python-headless>=4.8"]
screen-capture = ["mss>=9.0"]
screen-input = ["pyautogui>=0.9"]
anam = ["anam>=0.1", "av>=12.0.0", "numpy>=1.26"]
video = ["av>=12.0.0", "numpy>=1.26"]
video-overlay = ["Pillow>=10.0"]
yolo = ["ultralytics>=8.3"]
rtp = ["aiortp>=0.3.1"]
sip = ["aiosipua[rtp]>=0.4.1"]
webtransport = ["aioquic>=1.0"]
twilio = ["twilio>=9.0"]
phonenumbers = ["phonenumbers>=8.13"]
pynacl = ["pynacl>=1.5"]
realtime-openai = ["openai>=2.28", "websockets>=13.0"]
realtime-gemini = ["google-genai>=1.0.0"]
realtime-elevenlabs = ["elevenlabs>=2.40"]
websocket = ["websockets>=13.0"]
sse = ["httpx>=0.27", "httpx-sse>=0.4"]
gradium = ["gradium>=0.5.7"]
opentelemetry = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
pyroscope = ["pyroscope-io>=1.0"]
smart-turn = ["numpy>=1.26", "onnxruntime", "transformers"]
telegram = ["httpx>=0.27"]
teams = ["botbuilder-core>=4.14"]
whatsapp-personal = ["neonize>=0.3.14"]
postgres = ["asyncpg>=0.29"]
redis = ["redis>=5.0"]
mcp = ["mcp>=1.0"]
sources = [
    "roomkit[websocket]",
    "roomkit[sse]",
    "roomkit[whatsapp-personal]",
]
providers = [
    "roomkit[httpx]",
    "roomkit[anthropic]",
    "roomkit[openai]",
    "roomkit[vllm]",
    "roomkit[gemini]",
    "roomkit[mistral]",
    "roomkit[twilio]",
    "roomkit[telegram]",
    "roomkit[teams]",
    "roomkit[gradium]",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "bandit>=1.7",
    "pre-commit>=3.8",
    "roomkit[providers]",
    "roomkit[phonenumbers]",
    "roomkit[pynacl]",
    "roomkit[sources]",
    "roomkit[docs]",
    "roomkit[postgres]",
]
all = [
    "roomkit[providers]",

    "roomkit[whatsapp-personal]",
]

[project.urls]
Homepage = "https://roomkit.live"
Documentation = "https://www.roomkit.live/docs/"
Repository = "https://github.com/roomkit-live/roomkit"
Issues = "https://github.com/roomkit-live/roomkit/issues"

[tool.hatch.version]
path = "src/roomkit/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/AGENTS.md",
    "/llms.txt",
    "/llms-full.txt",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roomkit"]
artifacts = [
    "*.md",
    "*.txt",
]

[tool.hatch.build.targets.wheel.force-include]
"AGENTS.md" = "roomkit/AGENTS.md"
"llms.txt" = "roomkit/llms.txt"
"llms-full.txt" = "roomkit/llms-full.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore:connect_voice\\(\\) is deprecated:DeprecationWarning",
    "ignore:disconnect_voice\\(\\) is deprecated:DeprecationWarning",
    "ignore:connect_video\\(\\) is deprecated:DeprecationWarning",
    "ignore:disconnect_video\\(\\) is deprecated:DeprecationWarning",
    "ignore:bind_voice_session\\(\\) is deprecated:DeprecationWarning",
    "ignore:connect_voice\\(auto_greet=True\\) is deprecated:DeprecationWarning",
    "ignore:connect_realtime_voice\\(\\) is deprecated:DeprecationWarning",
    "ignore:disconnect_realtime_voice\\(\\) is deprecated:DeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google", "google.genai", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aic_sdk", "aic_sdk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sherpa_onnx", "sherpa_onnx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["qwen_tts", "qwen_tts.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["qwen_asr", "qwen_asr.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["neutts", "neutts.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["perth", "perth.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiortp", "aiortp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiosipua", "aiosipua.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastrtc", "fastrtc.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aec_audio_processing", "aec_audio_processing.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sounddevice", "sounddevice.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["onnxruntime", "onnxruntime.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["transformers", "transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["botbuilder", "botbuilder.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["botframework", "botframework.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gradium", "gradium.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["neonize", "neonize.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mistralai", "mistralai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyroscope", "pyroscope.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aioquic", "aioquic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["starlette", "starlette.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mss", "mss.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["PIL", "PIL.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anam", "anam.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["av", "av.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ultralytics", "ultralytics.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["deepgram", "deepgram.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["musetalk", "musetalk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["elevenlabs", "elevenlabs.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sphn", "sphn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["soxr", "soxr.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["roomkit.sources.neonize"]
disallow_untyped_decorators = false

[tool.uv]
# neutts, qwen-tts and qwen-asr pin incompatible transformers versions
conflicts = [
    [
        { extra = "neutts" },
        { extra = "qwen-tts" },
        { extra = "qwen-asr" },
    ],
]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PT", "ASYNC"]
ignore = ["ASYNC109", "ASYNC110"]  # timeout params and sleep-loops are intentional patterns

[tool.ruff.lint.isort]
known-first-party = ["roomkit"]

[tool.ruff.lint.per-file-ignores]
"src/roomkit/channels/__init__.py" = ["N802"]  # Factory functions use PascalCase by design
"src/roomkit/voice/backends/base.py" = ["B027"]  # Optional callback hooks with default no-ops
"src/roomkit/voice/realtime/provider.py" = ["B027"]  # Optional callback hooks with default no-ops
"src/roomkit/voice/realtime/transport.py" = ["B027"]  # Optional callback hooks with default no-ops
"examples/*.py" = ["E402", "E501", "N806", "ASYNC210", "ASYNC221", "F841", "SIM102", "SIM105"]  # Examples: relaxed style
"tests/*.py" = ["N817", "PT011", "PT012", "PT018", "PT019"]  # Allow short aliases + relaxed pytest style

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Allow assert in non-test code (used in type narrowing)

[tool.coverage.run]
source = ["roomkit"]
omit = [
    # Requires neonize + specific protobuf version that conflicts with other deps on CI
    "src/roomkit/sources/neonize.py",
    # Requires PyAV (native ffmpeg bindings) — not in CI
    "src/roomkit/recorder/*.py",
    "src/roomkit/video/recorder/*.py",
    "src/roomkit/video/pipeline/decoder/pyav.py",
    "src/roomkit/video/pipeline/encoder/*.py",
    "src/roomkit/video/pipeline/resizer/pyav.py",
    "src/roomkit/video/utils.py",
    # Requires optional native deps not in CI
    "src/roomkit/video/avatar/musetalk.py",
    "src/roomkit/video/backends/local.py",
    "src/roomkit/video/backends/fastrtc.py",
    "src/roomkit/knowledge/postgres.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
precision = 0

[dependency-groups]
dev = [
    "setuptools<81",
]
