[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roomkit"
dynamic = ["version"]
description = "Pure async Python library for multi-channel conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Sylvain Boily", email = "sylvainboilydroid@gmail.com" }]
keywords = ["async", "multi-channel", "chat", "voice", "sms", "rcs", "whatsapp", "ai", "rooms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.9"]

[project.optional-dependencies]
httpx = ["httpx>=0.27"]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=2.28"]
azure = ["openai>=2.28"]
vllm = ["openai>=2.28"]
openrouter = ["openai>=2.28"]
ollama = ["ollama>=0.4"]
gemini = ["google-genai>=2.0.0"]
mistral = ["mistralai>=2.0,<3"]
polargrid = ["polargrid-sdk>=0.9.0"]
deepgram = ["deepgram-sdk>=6.0.0"]
sherpa-onnx = ["sherpa-onnx>=1.10"]
elevenlabs = ["elevenlabs>=2.40"]
qwen-tts = ["qwen-tts>=0.1"]
qwen-asr = ["qwen-asr>=0.0.4"]
neutts = ["neutts>=0.1"]
# WebRTC realtime transport. Vendored gradio-free under roomkit.webrtc
# (src/roomkit/webrtc/), so this pulls the transport's own runtime deps instead
# of the upstream fastrtc package — which forced gradio<6 (CVEs) and pillow<12.
fastrtc = [
    "aiortc>=1.6",
    "av>=12.0.0",
    "librosa>=0.10",
    "numpy>=1.26",
    "pydub>=0.25",
    "anyio>=4.0",
]
aicoustics = ["aic-sdk>=2.1"]
webrtc-aec = ["aec-audio-processing>=0.1"]
local-audio = ["sounddevice>=0.4", "numpy>=1.26"]
local-video = ["opencv-python-headless>=4.8"]
screen-capture = ["mss>=9.0"]
screen-input = ["pyautogui>=0.9"]
anam = ["anam>=0.1", "av>=12.0.0", "numpy>=1.26"]
video = ["av>=12.0.0", "numpy>=1.26"]
video-overlay = ["Pillow>=10.0"]
yolo = ["ultralytics>=8.3"]
mediapipe = ["mediapipe>=0.10"]
rtp = ["aiortp>=0.7.0"]
sip = ["aiosipua[rtp]>=0.7.0", "aiortp>=0.7.0"]
webtransport = ["aioquic>=1.0"]
twilio = ["twilio>=9.0"]
phonenumbers = ["phonenumbers>=8.13"]
pynacl = ["pynacl>=1.5"]
realtime-openai = ["openai>=2.28", "websockets>=14.0"]
realtime-gemini = ["google-genai>=2.0.0"]
realtime-elevenlabs = ["elevenlabs>=2.40"]
websocket = ["websockets>=14.0"]
sse = ["httpx>=0.27", "httpx-sse>=0.4"]
gradium = ["gradium>=0.5.7"]
opentelemetry = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
pyroscope = ["pyroscope-io>=1.0"]
smart-turn = ["numpy>=1.26", "onnxruntime", "transformers"]
telegram = ["httpx>=0.27", "telegramify-markdown>=1.2.0"]
teams = ["botbuilder-core>=4.14"]
discord = ["discord.py>=2.4"]
# Buzz (Nostr relay) — buzzkit is a compiled (Rust) wheel, kept OUT of the
# aggregate `providers`/`dev`/`all` groups so RoomKit's own CI never has to
# build it. Install explicitly with `pip install roomkit[buzz]`.
buzz = ["buzzkit>=0.1.3", "soxr>=0.4"]
whatsapp-personal = ["neonize>=0.3.14"]
postgres = ["asyncpg>=0.29"]
redis = ["redis>=5.0"]
mcp = ["mcp>=1.0"]
console = ["rich>=13.0"]
sources = [
    "roomkit[websocket]",
    "roomkit[sse]",
    "roomkit[whatsapp-personal]",
]
providers = [
    "roomkit[httpx]",
    "roomkit[anthropic]",
    "roomkit[openai]",
    "roomkit[vllm]",
    "roomkit[openrouter]",
    "roomkit[ollama]",
    "roomkit[gemini]",
    "roomkit[mistral]",
    "roomkit[polargrid]",
    "roomkit[twilio]",
    "roomkit[telegram]",
    "roomkit[teams]",
    "roomkit[discord]",
    "roomkit[gradium]",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ty>=0.0.26",
    "bandit>=1.7",
    "pre-commit>=3.8",
    "roomkit[providers]",
    "roomkit[phonenumbers]",
    "roomkit[pynacl]",
    "roomkit[sources]",
    "roomkit[docs]",
    "roomkit[postgres]",
    "roomkit[opentelemetry]",
]
all = [
    "roomkit[providers]",
    "roomkit[sources]",
    "roomkit[whatsapp-personal]",
    "roomkit[deepgram]",
    "roomkit[elevenlabs]",
    "roomkit[sherpa-onnx]",
    "roomkit[fastrtc]",
    "roomkit[local-audio]",
    "roomkit[local-video]",
    "roomkit[video]",
    "roomkit[rtp]",
    "roomkit[sip]",
    "roomkit[realtime-openai]",
    "roomkit[realtime-gemini]",
    "roomkit[realtime-elevenlabs]",
    "roomkit[websocket]",
    "roomkit[sse]",
    "roomkit[postgres]",
    "roomkit[redis]",
    "roomkit[mcp]",
    "roomkit[opentelemetry]",
    "roomkit[phonenumbers]",
    "roomkit[smart-turn]",
    "roomkit[console]",
]

[project.urls]
Homepage = "https://roomkit.live"
Documentation = "https://www.roomkit.live/docs/"
Repository = "https://github.com/roomkit-live/roomkit"
Issues = "https://github.com/roomkit-live/roomkit/issues"

[tool.hatch.version]
path = "src/roomkit/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/AGENTS.md",
    "/llms.txt",
    "/llms-full.txt",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roomkit"]
artifacts = [
    "*.md",
    "*.txt",
]

[tool.hatch.build.targets.wheel.force-include]
"AGENTS.md" = "roomkit/AGENTS.md"
"llms.txt" = "roomkit/llms.txt"
"llms-full.txt" = "roomkit/llms-full.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore:connect_voice\\(\\) is deprecated:DeprecationWarning",
    "ignore:disconnect_voice\\(\\) is deprecated:DeprecationWarning",
    "ignore:connect_video\\(\\) is deprecated:DeprecationWarning",
    "ignore:disconnect_video\\(\\) is deprecated:DeprecationWarning",
    "ignore:bind_voice_session\\(\\) is deprecated:DeprecationWarning",
    "ignore:connect_voice\\(auto_greet=True\\) is deprecated:DeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
# Vendored WebRTC transport is kept close to upstream fastrtc 0.0.34, not
# restyled to roomkit conventions — excluded from type checking like ruff.
exclude = ["src/roomkit/webrtc/"]

[tool.ty.rules]
# Optional dependencies not installed in the dev environment
"unresolved-import" = "ignore"
# ABC stubs with `...` body and non-None return type are fine
"empty-body" = "ignore"

[[tool.ty.overrides]]
# Realtime provider/transport and video backend implementations intentionally
# override ABC callback signatures (provider-specific args, or the sync
# override of FastRTC's async send_message in the voice realtime transport).
include = [
    "src/roomkit/providers/*/realtime.py",
    "src/roomkit/providers/*/*/realtime.py",
    "src/roomkit/video/backends/*.py",
    "src/roomkit/voice/realtime/*.py",
]
[tool.ty.overrides.rules]
"invalid-method-override" = "ignore"

[[tool.ty.overrides]]
# `asyncio.get_event_loop_policy().get_event_loop()` is deprecated since 3.14 but
# remains the fallback for scheduling coroutines from non-async SIP/WebRTC
# callback threads, where no loop is running. Revisit when the loop reference is
# captured at setup time instead.
include = [
    "src/roomkit/voice/realtime/bridge.py",
    "src/roomkit/voice/realtime/fastrtc_transport.py",
]
[tool.ty.overrides.rules]
"deprecated" = "ignore"

[tool.uv]
# neutts, qwen-tts and qwen-asr pin incompatible transformers versions
conflicts = [
    [
        { extra = "neutts" },
        { extra = "qwen-tts" },
        { extra = "qwen-asr" },
    ],
]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]
# Vendored, gradio-free WebRTC transport (see src/roomkit/webrtc/LICENSE) — kept
# close to upstream fastrtc 0.0.34, not restyled to roomkit conventions.
extend-exclude = ["src/roomkit/webrtc/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PT", "ASYNC"]
ignore = ["ASYNC109", "ASYNC110"]  # timeout params and sleep-loops are intentional patterns

[tool.ruff.lint.isort]
known-first-party = ["roomkit"]

[tool.ruff.lint.per-file-ignores]
"src/roomkit/channels/__init__.py" = ["N802"]  # Factory functions use PascalCase by design
"src/roomkit/voice/backends/base.py" = ["B027"]  # Optional callback hooks with default no-ops
"src/roomkit/voice/realtime/provider.py" = ["B027"]  # Optional callback hooks with default no-ops
"src/roomkit/voice/realtime/transport.py" = ["B027"]  # Optional callback hooks with default no-ops
"examples/*.py" = ["E402", "E501", "N806", "ASYNC210", "ASYNC221", "ASYNC240", "F841", "SIM102", "SIM105"]  # Examples: relaxed style
"tests/*.py" = ["N817", "ASYNC240", "PT011", "PT012", "PT018", "PT019"]  # Allow short aliases + relaxed pytest style, sync path assertions

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Allow assert in non-test code (used in type narrowing)

[tool.coverage.run]
source = ["roomkit"]
omit = [
    # Requires neonize + specific protobuf version that conflicts with other deps on CI
    "src/roomkit/sources/neonize.py",
    # Requires PyAV (native ffmpeg bindings) — not in CI
    "src/roomkit/recorder/*.py",
    "src/roomkit/video/recorder/*.py",
    "src/roomkit/video/pipeline/decoder/pyav.py",
    "src/roomkit/video/pipeline/encoder/*.py",
    "src/roomkit/video/pipeline/resizer/pyav.py",
    "src/roomkit/video/utils.py",
    # Requires optional native deps not in CI
    "src/roomkit/video/avatar/musetalk.py",
    "src/roomkit/video/backends/local.py",
    "src/roomkit/video/backends/fastrtc.py",
    "src/roomkit/knowledge/postgres.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
precision = 0

[dependency-groups]
dev = [
    "setuptools<84",
]
